# Gamitopia

./: .eslintrc.js  .gitignore  Procfile  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js
gamitopia-backend/: .env-example  .gitignore  orm.env-example  ormconfig.js  ormconfig.json  ormconfig.json-example  package-lock.json  package.json
gamitopia-backend/src/: app.controller.ts  app.module.ts  main.ts
gamitopia-backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts  local.strategy.ts  user.service.ts
public/: index.html  manifest.json  manifest.webmanifest
public/highlightjs/: atom-one-dark.css  atom-one-light.css  highlight.pack.js
src/: App.vue  global.scss  global.variables.ts  index.html  index.js  main.ts  router.ts  shared.css  shared.js  styles.css
src/assets/: global.scss
src/components/: DarkMode.vue  Footer.vue  Nav.vue  PageHeader.vue
src/composables/: useCodeHighlighter.ts  useSearch.ts
src/games/tic-tac-toe/tic-tac-toe-ai/: Cargo.toml  README.md
src/games/tic-tac-toe/tic-tac-toe-ai/pkg/: README.md  package.json  tic_tac_toe_ai.d.ts  tic_tac_toe_ai.js  tic_tac_toe_ai_bg.js  tic_tac_toe_ai_bg.wasm  tic_tac_toe_ai_bg.wasm.d.ts
src/games/tic-tac-toe/tic-tac-toe-ai/src/: lib.rs
src/interfaces/: Card.ts  GameInfo.ts  IAuthResponse.ts  ICard.ts  INews.ts  News.ts  NewsPost.ts  authResponseInterface.ts  newsInterface.ts
src/router/: admin.ts  games.ts  index.ts
src/store/: games.ts  index.ts
src/utils/: copyToClipboard.ts
src/views/: About.vue  Games.vue  Home.vue  News.vue
(+202 files in other folders)
