[package]
name = "tic-tac-toe-ai"
version = "0.2.0"
authors = ["Gamitopia <gamitopia@gmail.com>"]
edition = "2018"
description = "A Tic-Tac-Toe AI for my Tic-Tac-Toe game"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version= "1.0", features = ["derive"] }
